app/styles/main.scss
@import 'h5bp';
@import 'fonts';

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  position: relative;
  font-family: 'robotolight', 'Helvetica', 'Arial', sans-serif;
  font-size: 16px;
  background-color: #fcfcfc;
  box-sizing: border-box;
  min-height: 100%;
}

body.open {
  overflow: hidden;
}

h1, h2 {
  margin: 0.5em 0 0 0;
}

p {
  margin: 0;
  line-height: 1.5em;
}

p a {
  margin: -6px;
  padding: 6px;
  position: relative;
}

.app-bar {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  overflow: hidden;
  z-index: 1;
  background: #fff;
}

.app-bar::before {
  content: '';
  height: 0.4em;
  display: block;
  background-image: linear-gradient(90deg,
    #31c5f1 0, #31c5f1 17%,
    #cfdd28 17%, #cfdd28 34%,
    #c2b59b 34%, #c2b59b 51%,
    #9fcc46 51%, #9fcc46 67%,
    #f68421 67%, #f68421 84%,
    #fdd53c 84%, #fdd53c 100%);
  width: 100%;
}

.app-toolbar {
  background: #f5f5f5;
  height: 2.5em;
  border-bottom: 1px solid #e1e1e1;
}

.logo-container {
  border-bottom: 2px solid #fff;

  button.app-bar-all-courses {
    float: right;
    position: absolute;
    display: block;
    top: 63px;
    font-size: 0.9em;
    right: 15px;
    width: auto;
    color: #da138e;
    border: 1px solid #da138e;
    white-space: nowrap;
    padding: 10px 20px;

    &:hover {
      background: #da138e;
      color: #fcfcfc;
    }
  }

  h1 {
    padding: 0;
    position: relative;

    &::after {
      content: '';
      width: 100%;
      display: block;
      height: 1px;
      background: rgba(#edddbe, 0.5);
      position: absolute;
    }
  }

  &::after {
    content: '';
    width: 100%;
    display: block;
    height: 1px;
    bottom: 0;
    background: #c2b59b;
  }
}

.app-toolbar::after {
  content: '';
  height: 1px;
  width: 100%;
  display: block;
}

.app-bar-container {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  position: relative;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  margin: 0 auto;
  background: #f5f5f5;
}

main.signup {
  text-align: center;
  margin-top: 2em;

  h1,
  h2 {
    font-family: 'robotolight';
    font-size: 1.4em;
    line-height: 1.3em;
    text-align: center;
  }

  h2 {
    color: #949494;
  }

  h1 {
    color: #9fcc46;
  }

  p {
    max-width: 20em;
    margin: 0 auto;
    color: #949494;
  }

  form {
    margin: 2em auto 0 auto;
    position: relative;
    display: inline-block;
    text-align: left;

    input[type="email"] {
      border: 1px solid #da138e;
      line-height: 2.2em;
      padding: 0.3em 0.5em;
      width: 20em;
      font-size: 0.8em;
      color: #000;
      outline: none;
    }

    div {
      position: relative;
    }

    label {
      display: block;
      margin: 0 auto;
      text-align: center;

      span {
        position: absolute;
        color: #da138e;
        text-transform: uppercase;
        font-size: 0.7em;
        top: -1.2em;
        left: 0;
      }
    }

    input[type="submit"] {
      background: transparent;
      position: absolute;
      outline: none;
      top: 0.2em;
      line-height: 3.4em;
      right: 0em;
      border: none;
      background-repeat: no-repeat;
      margin: 0;
      padding: 0;
      width: 3.2em;
      background-image: url(/images/submit-btn.svg);
      background-size: 2.2em;
      background-position: center;
    }

    input:-webkit-autofill {
        -webkit-box-shadow: 0 0 0 1000px white inset;
        color: #000 !important;
    }
  }
}

footer .social {
  background: #cfdd28;
  height: 80px;

  .footer-logo {
    float: left;
    width: 140px;
    padding: 18px 0 0 22px;
  }
}

footer .links {
  background: #928f8a;
  min-height: 150px;
  color: #fcfcfc;
  font-size: 0.75em;
  padding: 15px 15px 15px 22px;
  line-height: 1.5em;
}

footer .links a {
  color: #fcfcfc;
  text-decoration: none;
  display: block;
}

footer .legal {
  float: left;
}

footer .sitewide {
  font-family: "foco",sans-serif;
  font-style: normal;
  font-weight: 400;
  float: right;

  ul {
    margin: 0 10px;
    padding: 0;
    display: inline-block;
    vertical-align: top;
  }

  li {
    list-style-type: none;
    font-size: 0.75em;
    line-height: 1.6em;
  }

  li.title {
    text-transform: uppercase;
    font-weight: 700;
    color: #f7ffa1;
  }
}

footer .external {
  display: inline-block;
  float: right;
  padding: 20px 15px 0 0;

  img {
    width: 49px;
    height: 39px;
  }
}

.app-bar.open,
.app-bar.open ~ main {
  -webkit-transform: translate(250px, 0);
          transform: translate(250px, 0);
}

.app-bar .logo {
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
  font-size: 2em;
  line-height: 60px;
  margin: 0;
  padding: 0;
  color: #fefefe;
  float: none;
  max-width: none;
  font-weight: 300;
  line-height: 60px;
}

.app-bar .logo a {
  text-decoration: none;
  color: inherit;
  font-weight: normal;
}

.app-bar .logo img {
  width: 4.5em;
  height: 2.3em;
  padding: 0.1em 0 0 0.7em;
}

.app-bar-actions {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
      -ms-flex-direction: row;
          flex-direction: row;
  z-index: 2;

  a {
    text-decoration: none;
    position: relative;
    top: 0.4em;
    right: 1em;
    margin: 0 0.3em;
    font-size: 0.8em;
    font-family: robotolight;
    visibility: visible;
  }

  span {
    position: relative;
    margin: 0.2rem;
    top: 0.15em;
  }
}

.app-bar-cart {
  color: #9fcc46;
}

.app-bar-user,
.app-bar-user:visited {
  color: #4285f4;
  vertical-align: top;
}

.app-bar-user > span {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 12em;
  display: inline-block;
}

.app-bar-actions a img {
  width: 2em;
  margin-top: 0.2em;
}

.app-bar button {
  width: 60px;
  background-image: none;
  background-color: transparent;
  border: none;
  padding: 0;
  -webkit-transition: background-color 0.2s ease-out;
          transition: background-color 0.2s ease-out;
  -webkit-tap-highlight-color: transparent;
}

.app-bar button img {
  width: 60px;
  height: 60px;
}

.app-bar button:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

.app-bar button:focus {
  background-color: rgba(255, 255, 255, 0.2);
  outline: 0;
}

.app-bar button:active {
  background-color: rgba(255, 255, 255, 0.4);
}

button.menu img {
  height:24px;
  width: 24px;
}

.promote-layer {
  /*
  This may promote the layer to a composited
  layer.

  Replace with will-change when available

  #perfmatters
  */
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}

.base, p, ul, ol {
  font-size: 19px;
}

.navdrawer-container {
  visibility: hidden;
  z-index: 1;
  position: fixed;
  top: 0;
  bottom: 0;
  width: 250px;
  height: 100%;
  background-color: #da138e;
  color: #fefefe;
  -webkit-transform: translate(-250px, 0);
          transform: translate(-250px, 0);
  overflow-y: auto;
}

.navdrawer-container.open {
  visibility: visible;
  -webkit-transform: translate(0, 0);
          transform: translate(0, 0);
}

.app-bar, .navdrawer-container, main {
  -webkit-transition: -webkit-transform 0.3s ease-out;
          transition: transform 0.3s ease-out;
}

.navdrawer-container h4,
.navdrawer-container ul li a {
  height: auto;
  padding: 17px 20px;
  line-height: 1.4;
}

.navdrawer-container h4 {
  background-color: white;
  color: #000;
}

.navdrawer-container ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.navdrawer-container ul li a {
  display: block;
  text-decoration: none;
  color: white;
  -webkit-transition: background-color 0.2s ease-out;
          transition: background-color 0.2s ease-out;
  white-space: nowrap;
}

.navdrawer-container ul li {
  border-bottom-style: solid;
  border-width: 1px;
  border-color: white;
  padding: 0;
}

.navdrawer-container ul li::before {
  content: none;
}

.navdrawer-container ul li a:hover {
  background-color: rgba(255, 255, 255, 0.2);
}

.navdrawer-container ul li a:focus {
  background-color: rgba(255, 255, 255, 0.3);
  outline: 0;
}

.navdrawer-container ul li a:active {
  background-color: rgba(255, 255, 255, 0.4);
}

main {
  margin: 0 auto;
  /* Height of the header */
  padding: 115px 25px 32px 25px;
  min-height: 50%;

  a,
  a:visited {
    color: #da138e;
  }

  a:hover {
    color: #31c5f1
  }
}

@media all and (max-width: 459px) {
  footer .legal {
    float: none;
  }

  footer .sitewide {
    float: none;
    padding: 15px 0 0 0;

    ul {
      margin: 0;
    }

    .footer-solutions {
      margin-right: 15px;
    }
  }
}

/** Larger Screens - desktops and tablets **/
@media all and (min-width: 1100px) {
  .app-bar,
  footer {
    position: relative;
    max-width: 864px;
    margin: 0 auto;
  }

  .app-bar.open,
  .app-bar.open ~ main {
    -webkit-transform: translate(0px, 0);
            transform: translate(0px, 0);
  }

  .app-bar-container {
    max-width: 864px;
  }

  .app-bar-actions {
    float: right;
  }

  .app-bar::after {
    content: ' ';
    display: block;
    height: 0;
    overflow: hidden;
    clear: both;
  }

  button.menu {
    display: none;
  }

  nav {
    display: block;
    margin-top: 130px;
  }

  .navdrawer-container {
    display: none;
  }

  .navdrawer-container h4 {
    display: none;
  }

  .navdrawer-container ul {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    max-width: 864px;
    margin: 0 auto;
    -webkit-flex-direction: row;
        -ms-flex-direction: row;
            flex-direction: row;
  }

  .navdrawer-container ul li {
    border: none;
  }

  main {
    max-width: 864px;
    padding-top: 0;
    min-height: initial;
    padding-left: 90px !important;
    padding-right: 90px !important;
  }

  body {
    overflow-y: scroll;
  }

  .navdrawer-container {
    position: relative;
    margin-top: 0;
  }
}

.dash-courseinfo {
  width: 30% !important;
  margin-left: 290px;
  margin-top: 50px;

  .course {
    .name {
      color: #da138e;
    }

    .description {
      font-size: 14px;
      color: #676767;
    }
  }

  .actions {
    margin-top: 15px;
    margin-bottom: 15px;
    margin-left: 10px;

    .generate-exam {

      display: block;
      font-size: 0.9em;
      width: auto;
      color: #da138e;
      border: 1px solid #da138e;
      white-space: nowrap;
      padding: 10px 20px;
      background: #FFF;

      &:hover {
        background: #da138e;
        color: #fcfcfc;
      }
      }
  }

  .provider {
    .name {
      color: #585858;
    }

    .bio {
      font-size: 14px;
      color: #444444;
    }
  }
}

#starburst {
  width: 50%;
  height: 400;
  margin-left: 650px 
  padding-left: 90px 
  padding-right: 90px;
  margin-top: -350px;
}

#sequence {
  width: 600px;
  height: 70px;
}

#legend {
  padding: 10px 0 0 3px;
}

#sequence text, #legend text {
  font-weight: 600;
  fill: #fff;
}

#chart {
  position: relative;
}

#chart path {
  stroke: #fff;
}

#explanation {
  font-size: 12px;
  position: absolute;
  top: 90px;
  left: 165px;
  width: 140px;
  text-align: center;
  color: #666;
  z-index: 1;
}

#percentage {
  font-size: 2.5em;
}

